--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "react": "^19.0.0",
     "@inertiajs/react": "^2.1.0",
+    "react": "^19.0.0",
     "react-aria-components": "^1.12.2"
   },
   "devDependencies": {
+    "@types/react": "^19.1.13",
     "typescript": ">=4.0.0"
   },
   "repository": {
